@@ -12,7 +12,7 @@
 .\" software for any purpose.  It is provided "as is" without express or
 .\" implied warranty.
 .\"----------------------------------------------------------------------------
-.\" $Id: TclX.n,v 8.6 1997/07/04 08:40:57 markd Exp $
+.\" $Id: TclX.n,v 8.7 1997/07/04 15:04:49 markd Exp $
 .\"----------------------------------------------------------------------------
 .\"
 .TH "TclX" TCL "" "Tcl"
@@ -1040,33 +1040,6 @@ The file must be sorted in ascending order according to the same criteria
 results will occur.
 .sp
 This command does not work on files containing binary data (bytes of zero).
-'\"@:
-'\"@:This command is provided by Extended Tcl.
-'\"@endhelp
-'
-'\"@help: tcl/files/copyfile
-'\"@brief: Copy the remainder of one open file into another.
-.TP
-.B copyfile \fR?\fB\-bytes \fInum\fR | \fB\-maxbytes \fInum\fR? ?\fI\-translate\fR? \fIfromFileId toFileId\fR
-.br
-Copies the rest of the file specified by \fIfromFileId\fR, starting
-from its current position,
-to the file specified by \fItoFileId\fR, starting from its current
-position.  By default, newline translation is disabled for the duration
-of the copy.
-.sp
-If \fB\-bytes\fR is specified, then \fInum\fR bytes are copied.  If less than
-\fInum\fR bytes are available, an error is returned.  If \fB\-maxbytes\fR is
-specified, then \fInum\fR bytes are copied but no error is returned if less
-are available.
-.sp
-If \fB\-translate\fR is specified, then newline translation will not be
-disabled for the copy.
-.sp
-The command returns the number of bytes that were copied.
-.sp
-The \fB\-bytes\fR option is particularly useful for mixing binary data
-in with ASCII commands or data in a data stream.
 '\"@:
 '\"@:This command is provided by Extended Tcl.
 '\"@endhelp
